css/style.css
/* ... */
@media (max-width: 767.98px) {
    .sub-nav {
        display: none;
    } 
}

.nav__ul {
  list-style-type: none;
  margin-top: 5px;
  padding: 0;
  /*width: 100%;*/
  height: 100%;
  /*position: fixed;*/
  /*overflow: auto;*/
}

.res-header {
    font-family: "Genty" !important;
}

.sub-nav li {
    display: inline;
}

.sub-nav a {
  padding: 6px 16px 6px 16px;
  text-decoration: none;
  font-size: 15px;
  color: white;
}

.sub-nav a:hover {
  color: #F1E5E6;
}

.nav-main {
  padding-left: 25%;
  width: 75%;
  text-align: center;
}

a.anchor {
    display: block;
    position: relative;
    top: -10vh;
    visibility: hidden;
}

.remaining-width-container {
  flex-grow: 100; 
  position: relative;
}

.absolute-right {
  position: absolute;
  right: 0;
}

.absolute-center {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
} 

/* hack24 */

/* text */
.hack24-bartex {
  font-family: 'Bartex';
  width: 100%;
  font-size: 100px;
  font-weight: bold;
  color: #ffffff; 
  /* -webkit-text-stroke: 0.5px rgba(242, 0, 162, 1); */
  text-shadow: 
              -1px -1px 0 rgba(242, 0, 162, 1),  
              1px -1px 0 rgba(242, 0, 162, 1),
             -1px  1px 0 rgba(242, 0, 162, 1),
              1px  1px 0 rgba(242, 0, 162, 1),
              5px  5px 0 rgba(242, 0, 162, 1);
  letter-spacing: 1px;
  text-rendering: optimizeLegibility;
}

.hack24-text{
  font-family: 'Cabin';
  font-size: 30px;
}

.hack24-header{
  font-family: 'Cabin';
  font-size: 64px;
}

/* about */
.hack24-about-section {
  position: relative;
  background-color: #FFEDF6;
}

/* flowers */
.flower-container {
  position: relative;
}

.top-left-flower {
  position: absolute;
  top: 10px;
  left: 10px;
}

.top-left-flower-small {
  position: absolute;
  top: 250px;
  left: 15px;
  width: 10%;
}

.bottom-right-flower {
  position: absolute;
  bottom: 10px;
  right: 10px;
}

.bottom-right-flower-small {
  position: absolute;
  bottom: 10px;
  right: 10px;
  width: 10%;
}

/* zigzag */
.hack24-zigzag {
  width: 100%;
  height: 100px;
  background: linear-gradient(45deg, #ffedf6 25%, transparent 25%), linear-gradient(-45deg, #ffedf6 25%, transparent 25%);
  background-size: 100px 100px;
  position: relative;
}

.hack24-zigzag.bottom {
  transform: rotate(180deg);
}

/* faq */
.hack24-faq-section {
  padding: 0em 0 0em 0;
  position: relative;
}

/* hack23 */

.hack23-reg-btn {
  padding: 10px;
  background-position: center; 
  background-repeat: no-repeat;
  background-image: url("/images/hackathon/registrationboxbg.png");
  background-size: 95% 70%; 
}

.hack23-claw-machine {
  background-image: url("/images/hackathon/clawmachines.png");
  background-size: cover;
}

.hack23-img-banner {
  padding: 10em 0px 0px 0px;
  position: relative; }

.hack23-about-section {
  padding: 5em 0em 2em 0em;
  position: relative;
}

.hack23-workshop-section {
  padding: 10em 0px;
  position: relative;
}

.hack23-faq-section {
  padding: 0em 0 10em 0;
  position: relative;
}

.grid-container {
  display: grid;
  align-content: space-evenly;
  grid-template-columns: auto auto auto auto;
  gap: 20px;
  padding: 0px;
}

.grid-container > div {
  text-align: justify;
  padding: 10px 10px;
  font-size: 30px;
}

